--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Zihan Yang's Homepage
+page-top-title: ZiHan Yang
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+home-subtitle: Zihan Yang&ensp;|&ensp;杨子涵
+copyright-text: '&copy; Zihan Yang 2024-2025. All Rights Reserved.'
